[metadata]
name = grok_export_toolkit
version = 1.0.0
author = Dynnovators Studio — AI Systems Division
license = MIT
license_files = LICENSE
description = Utilities to transform and organize xAI Grok exports into structured formats for visualization and analysis.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = grok, xai, export, chatgpt, converter, json, llm, dynnovators
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Utilities
    Intended Audience :: Developers
    Natural Language :: English

[options]
python_requires = >=3.8
